tests/paczka1/small_fuzzy/11029257.err
Error in line 13: Abwwf6cmSL A675 3,8
Error in line 4: PSrK7 S921 91,2
